Changes in 1.6

 - Use setWindowTextA in Windows device for WIN64 platform, posted by veegun

 - ELL_ERROR log events are now created when shaders fail to compile or link, reported by Halan

 - irrList now uses irrAllocator, fixed by Nox

 - Added IGUIWindow::setDraggable and IGUIWindow::isDraggable, by Nox

 - Added SGI RGB file reader by Gary Conway, for loading Silicon Graphics .rgb, .rgba, .sgi, .int and .inta textures

 - Renamed setResizeAble to setResizable

 - Added new device method minimizeWindow which minimizes the window (just as if the minimize button has been clicked).

 - SkyDome is now serialized correctly

 - Added PLY mesh reader and writer

 - Ensure ListBox on combo box doesn't hang off the bottom of the GUI root, by Matthias Specht

 - Made IGUIElements recalculate clipping rectangle after setNotClipped, reported by Aelis440

 - Bug fix for the combo box where it showed white text instead of skin colour before being focused, fix posted by drewbacca

 - EGDS_MESSAGE_BOX_HEIGHT is now honoured, bug reported by Spkka

 - Fixed a bug in the edit box where events are sometimes sent to a null parent, reported by Sudi.

 - Coordinate system fix for OpenGL in SDL device

 - Added generic console device. You can now use Irrlicht to create and manipuate graphics on a shell where no graphics hardware 
   or windowing system is available. To enable it uncomment #define _IRR_USE_CONSOLE_DEVICE_ in IrrCompileConfig.h
   - The console device can now present images from the software drivers and display them as ASCII art in the console
   - By default it replaces the default font in the skin, to prevent fonts from being huge.


Changes in 1.6 TA
	- implemented isALoadableFileFormat ( File *file ) for the Archive Loader
Changes in 1.6 TA
	- PixelBlend16 and PixelBlend16_simd are working for the new rules.
	- bugfix. CLightSceneNode didn't correctly update it's attributes
	
		Lighting Linear Attenuation.	= 1.f / radius
		